Enter Info with Realtime database is done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
           package="com.example.intern">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION">
+    </uses-permission>
 
     <application
             android:allowBackup="true"
@@ -11,19 +13,24 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".EnterInfoActivity">
+
+        </activity>
         <activity android:name=".RegisterActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
+
+
         </activity>
         <activity
                 android:name=".MainActivity"
                 android:label="@string/title_activity_main">
         </activity>
         <activity android:name=".LoginActivity">
-
         </activity>
     </application>
 
