--- a/build.gradle
+++ b/build.gradle
@@ -4,17 +4,21 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://www.jitpack.io" }
+
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:3.6.1'
 
         classpath 'com.google.gms:google-services:4.3.3'
 
 
-        classpath 'com.android.tools.build:gradle:3.4.0-alpha05'
+        classpath 'com.android.tools.build:gradle:3.6.1'
         //noinspection GradleDependency
-        classpath 'com.google.gms:google-services:4.0.2'
+        classpath 'com.google.gms:google-services:4.2.0'
+
+
         
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -25,6 +29,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.google.com'
+        }
         
     }
 }
