--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,26 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+
+
+    // recycler view
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    // For control over item selection of both touch and mouse driven selection
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
+
+
+    //
+    // Glide library
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    // Skip this if you don't want to use integration libraries or configure Glide.
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //circular imageVIew
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    // Card View
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
 
 apply plugin: 'com.android.application'
